# kayan_inquiry_management

./: .gitignore  .pre-commit-config.yaml  README.md  USER_MANUAL.md  license.txt  pyproject.toml
kayan_inquiry_management/: api.py  hooks.py  modules.txt  patches.txt  permissions.py  utils.py
kayan_inquiry_management/administration/doctype/audit_event/: audit_event.json  audit_event.py
kayan_inquiry_management/administration/doctype/domain_mapping/: domain_mapping.json  domain_mapping.py
kayan_inquiry_management/administration/doctype/inquiry_settings/: inquiry_settings.js  inquiry_settings.json  inquiry_settings.py  test_inquiry_settings.py
kayan_inquiry_management/administration/doctype/mailbox_mapping/: mailbox_mapping.js  mailbox_mapping.json  mailbox_mapping.py
kayan_inquiry_management/ai_processing/doctype/ai_processing_log/: ai_processing_log.json  ai_processing_log.py
kayan_inquiry_management/approval_management/doctype/inquiry_approval/: inquiry_approval.json  inquiry_approval.py
kayan_inquiry_management/inquiry_management/: __init__.py
kayan_inquiry_management/inquiry_management/doctype/inquiry_assignment/: inquiry_assignment.json  inquiry_assignment.py
kayan_inquiry_management/inquiry_management/doctype/inquiry_email/: inquiry_email.json  inquiry_email.py
kayan_inquiry_management/sla_management/: sla_monitor.py
n8n_workflows/: 01_email_intake_and_classification.json  02_ocr_and_data_extraction.json  03_customer_matching_and_ticket_creation.json  04_email_thread_sync.json  05_sla_breach_escalation.json  06_approval_and_notifications.json
(+15 files in other folders)
